# aws-services-implemetations

./: README.md  pyproject.toml
lambda/: fb_messenger_webhook.py
