[tool.poetry]
name = "aws-services-implemetations"
version = "0.1.0"
description = ""
authors = ["Mobasshir Bhuiya <mobasshirbhuiyan.shagor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.149"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
